# puzzlebot-emdial

./: .gitignore  LICENSE  README.md  manual_ejecucion.md  mod1_requirements.txt  modA_requirements.txt  requirements.txt
src/line_follower/: package.xml  setup.py
src/line_follower/config/: cv_params.yaml  onb_params.yaml
src/line_follower/launch/: line_follow_loc_launch.py  line_follow_onb_launch.py  line_follow_rem_launch.py  line_follow_sim_launch.py
src/line_follower/line_follower/: Demo_FuzzyLite.ipynb  cam_preprocess.py  fuzzy.py  line_cmd.py  line_recogni.py  odometry_node.py  robot_ctrl.py  traffic_light_cnn.py  traffic_light_detector.py  trafficlight_recogni.py  trafficlight_recogni_legacy.py  trafficlight_recogni_mk2.py
src/mc1_opencontrol/: package.xml  setup.cfg  setup.py
src/mc1_opencontrol/config/: params.yaml  params_square.yaml  params_user.yaml
src/mc1_opencontrol/launch/: square_path_launch.py  user_path_launch.py  user_path_launch_sim.py
src/mc1_opencontrol/mc1_opencontrol/: path_generator.py  square_path.py  user_path.py
src/mc2_motioncontrol/: package.xml  setup.cfg  setup.py
src/mc2_motioncontrol/config/: path_params.yaml  (+1 more)
src/mcHT_trafficlight/: package.xml  setup.cfg  setup.py
src/mobile_robotics/: package.xml  setup.py
src/my_package/: package.xml  setup.py
src/puzzlebot_emdial/: package.xml  setup.cfg  setup.py
src/puzzlebot_emdial/config/: path_params.yaml  robot_ctrl_params.yaml  tlts_params.yaml
src/puzzlebot_emdial/launch/: emdial_loc_launch.py  emdial_onb_launch.py  emdial_rem_launch.py  emdial_sim_launch.py  line_follow_loc_launch.py  line_follow_onb_launch.py  line_follow_rem_launch.py  line_follow_sim_launch.py  path_launch.py
src/puzzlebot_emdial/puzzlebot_emdial/: line_cmd.py  line_recogni.py  robot_ctrl.py  tlts_detector.py  trafficsignal_detector.py  visual_monitor.py  x_odometry_node.py  x_path_control.py
src/puzzlebot_gazebo/: setup.py
src/toolbox_pkg/: package.xml  setup.cfg  setup.py
src/webcam_pub/: package.xml  setup.cfg  setup.py
src/webcam_pub/webcam_pub/: webcam_publisher.py
train/: TLRecogni_train_YOLOv8.ipynb  TLRecogni_train_YOLOv8n.ipynb  TLTSRecogni_train_YOLOv8_TWO.ipynb
(+45 files in other folders)
