<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>line_follower</name>
  <version>0.2.0</version>
  <description>A package for line following robot, built for ROS2 on a MCR2 Puzzlebot.</description>
  <maintainer email="taldrick@gmail.com">atad</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <buildtool_depend>ament_python</buildtool_depend>
    <build_type>ament_python</build_type>
  </export>
</package>
